--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,7 @@
+* {
+    font-family: monospace;
+}
+
 .container {
     margin: auto;
     border: solid 2px black;
@@ -6,7 +10,12 @@
 }
 
 .display {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    font-size: 150px;
     background-color: black;
+    color: white;
     height: 20%;
     border: 2px solid;
     border-color: rgb(95, 99, 104);
